--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -7,7 +7,7 @@ a {
     text-decoration: none;
 }
 
-input {
+input, select {
     background-color: #C2DDE3;
     border-radius: 2px;
     color: #02647B;
